# ecoblock-sdk

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
assets/community/: daily_quests.json  leaderboard.json  mesh_map.json  rewards.json  upcoming_quests.json
assets/data/: community_quests.json  personal_quests.json  unique_quests.json
assets/rive/: tree.riv
coverage/: lcov.info
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_shell.dart  app_theme.dart  main.dart
lib/core/: config.dart
lib/l10n/: translation.dart
lib/models/: blog.dart  story.dart  story_group.dart  story_item.dart
lib/services/: bluetooth_service.dart  bluetooth_service_provider.dart  communication_service.dart  ibluetooth_service.dart  kernel_api.dart  locator.dart  memory_service.dart  mock_bluetooth_service.dart  network_service.dart  permission_service.dart  providers.dart  rust_bridge_service.dart
lib/shared/: widgets.dart
lib/theme/: theme.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/scripts/: patch_frb_imports.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_ecoblock_mobile.podspec
rust_builder/linux/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+207 files in other folders)
